--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,10 @@
 jQuery Edit In Place (JEIP)
 Change Log
 
-0.2.0 - 16 Dec 2012
+0.2.0 - 17 Dec 2012
 	- new settings: method, hint_text, or_text, prepare_data, template,
-	  on_render, empty_text, empty_class
+	  on_render, empty_text, empty_class, name, process_value,
+	  prepare_value
 	- fixed asynchronicity issues with remove() after fadeOut()
 	- elements ids prefixed with jeip-
 	- optimizations: decreased number of calls to jQuery on the same
@@ -12,3 +13,4 @@ Change Log
 	- customizable ajax data, by default containing only the input value
 	- mouseover_class is optional, disabled by default
 	- support for empty strings
+	- submit target can be a function instead of an ajax call
