fixed finalizing editing when target is empty or a function, setting is_error for determining whether server reported an error

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@ Change Log
 0.2.0 - 17 Dec 2012
 	- new settings: method, hint_text, or_text, prepare_data, template,
 	  on_render, empty_text, empty_class, name, process_value,
-	  prepare_value
+	  prepare_value, is_error
 	- fixed asynchronicity issues with remove() after fadeOut()
 	- elements ids prefixed with jeip-
 	- optimizations: decreased number of calls to jQuery on the same
